--- a/Manager/css/style.css
+++ b/Manager/css/style.css
@@ -67,17 +67,18 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #50a3a2;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
     position: relative;
     top: 0;
-    width: 100%;
+    width: 110%;
 }
 li {
-    float: left;
+    display:inline;
 }
 li a {
-    display: block;
-    color: white;
+    display: inline-block;
+    color: #666;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
