--- a/Manager/css/style.css
+++ b/Manager/css/style.css
@@ -280,98 +280,50 @@ input[type="submit"]:hover {
   -webkit-animation-delay: 11s;
           animation-delay: 11s;
 }
-input[type='range'] {
-  display: block;
-  margin: 0.2em auto;
-  border: solid .5em transparent;
-  padding: 0;
-  width: 15.5em;
-  height: 1em;
-  border-radius: .25em;
-  background: transparent;
-  font-size: 1em;
-  cursor: pointer;
-}
-input[type='range'], 
-input[type='range']::-webkit-slider-runnable-track, 
-input[type='range']::-webkit-slider-thumb {
-  -webkit-appearance: none;
-}
-input[type='range']::-webkit-slider-runnable-track {
-  width: 15.5em;
-  height: 0.5em;
-  border-radius: 0.25em;
-  background: #fff;
-}
-input[type='range']::-webkit-slider-runnable-track {
-  background: linear-gradient(#e44e4f, #e44e4f) no-repeat #fff;
-}
-input[type='range']::-moz-range-track {
-  width: 15.5em;
-  height: 0.5em;
-  border-radius: 0.25em;
-  background: #fff;
-}
-input[type='range']::-moz-range-track {
-  background: linear-gradient(#e44e4f, #e44e4f) no-repeat #fff;
-}
-input[type='range']::-ms-track {
-  border: none;
-  width: 15.5em;
-  height: 0.5em;
-  border-radius: 0.25em;
-  background: #fff;
-  color: transparent;
-}
-input[type='range']::-ms-fill-lower {
-  border-radius: 0.25em;
-  background: #e44e4f;
-}
-input[type='range']::-webkit-slider-runnable-track {
-  background-size: 0% 100%;
-}
-input[type='range']::-moz-range-track {
-  background-size: 0% 100%;
-}
-input[type='range']::-webkit-slider-thumb {
-  margin-top: -0.125em;
-  border: none;
-  width: 0.75em;
-  height: 0.75em;
-  border-radius: 50%;
-  box-shadow: 0 0 0.125em #333;
-  background: #fff;
-}
-input[type='range']::-moz-range-thumb {
-  border: none;
-  width: 0.75em;
-  height: 0.75em;
-  border-radius: 50%;
-  box-shadow: 0 0 0.125em #333;
-  background: #fff;
-}
-input[type='range']::-ms-thumb {
-  border: none;
-  width: 0.75em;
-  height: 0.75em;
-  border-radius: 50%;
-  box-shadow: 0 0 0.125em #333;
-  background: #fff;
-}
-input[type='range']::-ms-tooltip {
-  display: none;
-}
-input[type='range']:focus {
-  outline: none;
-  box-shadow: 0 0 0.25em #e44e4f;
+.slider {
+  width: 100%;
+  margin: 50% auto;
 }
 
-output[for='range'] {
-  font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, Sans-Serif;
-  font-size: 13px;
-  color: white;
-  display: block;
+input[type="range"] {
+  -webkit-appearance: none !important;
+  width: 100%;
+  height: 15px;
+  background-color: #A3CD99;
+  border: 1px solid #97c68b;
+  border-radius: 10px;
+  margin: auto;
+  transition: all 0.3s ease;
+}
+input[type="range"]:hover {
+  background-color: #b2d5aa;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none !important;
+  width: 20px;
+  height: 20px;
+  background-color: #579E81;
+  border-radius: 30px;
+  box-shadow: 0px 0px 3px #3c6d59;
+  transition: all 0.5s ease;
+}
+input[type="range"]::-webkit-slider-thumb:hover {
+  background-color: #457d66;
+}
+input[type="range"]::-webkit-slider-thumb:active {
+  box-shadow: 0px 0px 1px #3c6d59;
+}
+
+#rangevalue {
   text-align: center;
+  font-family: "Quantico", sans-serif;
+  font-size: 18px;
+  display: block;
+  margin: auto;
+  padding: 10px 0px;
+  width: 100%;
+  color: #579E81;
 }
 @-webkit-keyframes square {
   0% {
