--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -149,8 +149,9 @@ input[type="submit"]:hover {
   background-color: #f5f7f9;
 }
 select {
-   border: 1px solid #111;
-   background: rgba(255, 255, 255, 0.2);
+   border: 1px solid rgba(255, 255, 255, 0.4);
+   background: #53e3a6;
+   color: white;
    width: 150px;
    padding: 5px 35px 5px 5px;
    font-size: 16px;
@@ -159,7 +160,6 @@ select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
-   color: white;
 } 
 input[type='range'] {
   display: block;
